--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#CC0202</color>
+    <color name="gray">#3C3B3B</color>
+    <color name="darkWhite">#D3D3D3</color>
+    <color name="lightred">#BA4444</color>
 </resources>
