--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#81BCFC"
     android:orientation="vertical">
 
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_weight="0.5"
+        android:layout_weight="0.4"
         android:id="@+id/map"
         tools:context=".MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
@@ -22,7 +23,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
 
-            android:background="@drawable/your_rounded_shape"
+            android:background="@drawable/panel_background_rounded_shape"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
