--- a/app/src/main/res/drawable/panel_background_rounded_shape.xml
+++ b/app/src/main/res/drawable/panel_background_rounded_shape.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#C8C8C8"/>
+    <solid android:color="#FFFFFF"/>
 
-    <stroke android:width="2dp"
-        android:color="#CDCDCD"/>
+    <stroke android:width="20dp"
+        android:color="#FFFFFF"/>
 
     <padding android:left="2dp"
         android:top="2dp"
         android:right="2dp"
         android:bottom="2dp"/>
 
-    <corners android:radius="8dp" />
+    <corners android:topLeftRadius="8dp" android:topRightRadius="8dp"/>
+
 </shape>
