--- a/app/src/main/res/layout/earthquake_item.xml
+++ b/app/src/main/res/layout/earthquake_item.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/countryFlagIV"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:src="@drawable/shape"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/location"
         app:layout_constraintBottom_toBottomOf="@+id/stroke"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/countryTV"
-        android:layout_width="208dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Elazığ, Turkey"
@@ -54,7 +54,7 @@
             android:gravity="center"
             android:text="4,0"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/red"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,6 @@
             android:layout_marginTop="4dp"
             android:gravity="center"
             android:maxLines="1"
-
             android:text="10:55"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -93,7 +92,6 @@
             android:gravity="center"
             android:maxLines="1"
             android:text="10 minutes ago"
-
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="10sp"
