--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,14 +26,14 @@
             android:background="@drawable/panel_background_rounded_shape"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/earthquakeDetailsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/panel_background_rounded_shape"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/mag"
@@ -111,7 +111,7 @@
                 android:id="@+id/countryTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="46dp"
+                android:layout_marginTop="62dp"
                 android:gravity="center"
                 android:text="Elazığ, Turkey"
                 android:textAlignment="center"
@@ -121,6 +121,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:src="@drawable/back_arrow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@color/white"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
