--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="gray">#3C3B3B</color>
+    <color name="lightgray">#7A7979</color>
     <color name="darkWhite">#D3D3D3</color>
     <color name="lightred">#BA4444</color>
 </resources>
