handled item click and showing earthquake details

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,14 +26,14 @@
             android:background="@drawable/panel_background_rounded_shape"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/earthquakeDetailsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/panel_background_rounded_shape"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/mag"
