--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,5 +34,13 @@
         <action
             android:id="@+id/action_emergencyFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_emergencyFragment_to_whistleFragment"
+            app:destination="@id/whistleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/whistleFragment"
+        android:name="com.techgeeksclub.earthquake.ui.fragment.WhistleFragment"
+        android:label="fragment_whistle"
+        tools:layout="@layout/fragment_whistle" />
 </navigation>
