--- a/app/src/main/res/layout/fragment_whistle.xml
+++ b/app/src/main/res/layout/fragment_whistle.xml
@@ -38,7 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="90dp"
                     android:layout_marginEnd="8dp"
                     android:text="Press the button to make whistle sound in emergencies."
                     android:textAlignment="center"
@@ -47,7 +47,7 @@
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
 
                 <ImageButton
@@ -55,7 +55,7 @@
                     android:layout_width="170dp"
                     android:layout_height="170dp"
                     android:layout_marginTop="100dp"
-                    android:background="@drawable/whistle"
+                    android:background="@drawable/whistle_off"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/emergencyText" />
