--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -15,7 +15,7 @@
             android:clickable="false"
             android:focusable="false"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="82dp"
+            android:layout_marginBottom="75dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,8 @@
                 android:layout_width="wrap_content"
                 android:clickable="false"
                 android:focusable="false"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="20dp">
 
 
                 <ImageButton
@@ -45,9 +46,9 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv"
-                    android:layout_width="match_parent"
+                    android:layout_width="348dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="32dp"
+                    android:layout_marginTop="24dp"
                     android:padding="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
